@@ -465,11 +465,6 @@
   }
 }
 
-// Added to the body to disable scrolling when dialogs are open
-body.tox-dialog__disable-scroll {
-  overflow: hidden;
-}
-
 .tox.tox-platform-ie {
   /* IE11 CSS styles go here */
   .tox-dialog-wrap {
