@@ -1,0 +1,15 @@
+//
+// Copyright (c) Tiny Technologies, Inc. All rights reserved.
+// Licensed under the LGPL or a commercial license.
+// For LGPL see License.txt in the project root for license information.
+// For commercial licenses see https://www.tiny.cloud/
+//
+
+//
+// Shadow DOM styles for the root page
+//
+
+@import 'globals/global-variables';
+
+@import 'components/dialog/blocker';
+@import 'components/fullscreen/fullscreen';
