@@ -28,6 +28,7 @@
 @import 'components/comments/comment';
 @import 'components/comments/user';
 @import 'components/dialog/dialog';
+@import 'components/dialog/blocker';
 @import 'components/dropzone/dropzone';
 @import 'components/edit-area/edit-area';
 @import 'components/edit-area/inline-edit-area';
